--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1> Odin recipes</h1>
-  <a href="fries-with-bacon.html"> Fries with bacon </a>
+  <a href="recipes/fries-with-bacon.html"> Fries with bacon </a>
 </body>
 </html>
 
