--- a/recipes/fries-with-bacon.html
+++ b/recipes/fries-with-bacon.html
@@ -1,1 +1,38 @@
-<h1> Bacon Fries</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1> Bacon Fries</h1>
+
+<img src="../fries.jpg">
+
+<p> Description: Bacon fries are just something out of this world. If French fries weren't already perfect by themselves, now make them even more awesome by wrapping bacon around them. Garnish with parsley flakes and eat while warm, with a sriracha ketchup sauce if you like.</p>
+
+ingredients
+
+<ul>
+<li> cooking spray </li>
+<li> 1 (28 ounce) package frozen steak fries </li>
+<li> 1 (16 ounce) package bacon slices, halved </li>
+<li> ¼ teaspoon seasoned salt </li>
+</ul>
+
+steps
+
+<ol>
+  <li> Preheat oven to 475 degrees F (245 degrees C). Spray a large baking sheet with cooking spray. </li>
+  <li> Wrap half a bacon slice around each French fry and place seam side-down on the baking sheet about 1-inch apart. </li>
+  <li> Bake in the preheated oven until bacon is browned and crisp, about 30 minutes. Remove from oven and sprinkle with seasoned salt. Transfer to serving plate. </li>
+</ol>
+
+<strong>suggestion: </strong>
+
+you can add <em> cheddar</em>
+
+</body>
+</html>
