improve html and add css

--- a/recipes/fries-with-bacon.html
+++ b/recipes/fries-with-bacon.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bacon Fries</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <h1> Bacon Fries</h1>
@@ -13,7 +14,7 @@
 
 <p> Description: Bacon fries are just something out of this world. If French fries weren't already perfect by themselves, now make them even more awesome by wrapping bacon around them. Garnish with parsley flakes and eat while warm, with a sriracha ketchup sauce if you like.</p>
 
-ingredients
+Ingredients
 
 <ul>
 <li> cooking spray </li>
@@ -22,7 +23,7 @@ ingredients
 <li> ¼ teaspoon seasoned salt </li>
 </ul>
 
-steps
+Steps
 
 <ol>
   <li> Preheat oven to 475 degrees F (245 degrees C). Spray a large baking sheet with cooking spray. </li>
@@ -30,7 +31,7 @@ steps
   <li> Bake in the preheated oven until bacon is browned and crisp, about 30 minutes. Remove from oven and sprinkle with seasoned salt. Transfer to serving plate. </li>
 </ol>
 
-<strong>suggestion: </strong>
+<strong>Suggestion: </strong>
 
 you can add <em> cheddar</em>
 
