--- a/recipes/salmon-sashimi.html
+++ b/recipes/salmon-sashimi.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salmon Sashimi</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <h1> Salmon Sashimi</h1>
 
 <img src="../sashimi.jpg" >
 
-<h2> preparation </h2>
+<h2> Preparation </h2>
 
 Slice salmon fish into thin slices (sashimi style, about ¼ inch thick or your preference). Slices should be rectangular shape. This also works for tuna sashimi and spicy salmon sashimi.
 
-<h4> sauces </h4>
+<h4> Sauces </h4>
 <ul>
 <li><strong>Soy Sauce:</strong> Low sodium or regular soy sauce will be work./li>
 <li><strong>Wasabi</strong>: You can buy pre-made wasabi paste at many grocery stores or online. You can also buy wasabi powder which is my favorite because it tastes fresher and more potent. Just add water to the wasabi powder and you have the awesome wasabi that you get in Japanese restaurants. You can also store the wasabi powder in the refrigerator for future use.</li>
